# mobcli

./: CMakeLists.txt  README.md
.github/workflows/: continuous-integration.yml  release-build.yml
include/filesystem/: TempFile.h
src/commands/: CallEventsCommand.cpp  CallEventsCommand.h  ClientCommonCommand.cpp  ClientCommonCommand.h  CurrentStateCommand.cpp  CurrentStateCommand.h  DeviceListCommand.cpp  DeviceListCommand.h  DeviceSettingsCommand.cpp  DeviceSettingsCommand.h  NetworkSettingsCommand.cpp  NetworkSettingsCommand.h  SessionCommand.cpp  SubscribeCommand.cpp  SubscribeCommand.h
src/filesystem/: TempFile.h
src/mobgtw/: StderrLogger.cpp  StderrLogger.h
